fixed alignment

--- a/style.css
+++ b/style.css
@@ -48,5 +48,5 @@
 }
 
 #santelmo {
-	transform: rotate(1deg) translateX(6px);
+	transform: rotate(1deg) translateX(4px);
 }
